--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ canvas {
     display: block; 
     margin-left: auto; 
     margin-right: auto;
+    margin-top: 4em;
+    margin-bottom: 4em;
 }
 
 header, footer {
